[package]
name = "linregress"
version = "0.5.3"
authors = ["Nils Mehrtens <nils@hasinila.de>"]
edition = "2018"
description = "ordinary least squared linear regression with some basic statistics"
documentation = "https://docs.rs/linregress"
homepage = "https://github.com/n1m3/linregress"
repository = "https://github.com/n1m3/linregress"
readme = "README.md"
keywords = ["statistics", "regression", "ols"]
license = "MIT"

[dependencies]
nalgebra = "0.32.3"

[dev-dependencies]
tiny-bench = "0.3.0"

[[bench]]
name = "benchmarks"
harness = false
