[package]
name = "linregress"
version = "0.5.4"
authors = ["Nils Mehrtens <nils@hasinila.de>"]
edition = "2021"
description = "ordinary least squared linear regression with some basic statistics"
documentation = "https://docs.rs/linregress"
homepage = "https://github.com/n1m3/linregress"
repository = "https://github.com/n1m3/linregress"
readme = "README.md"
keywords = ["statistics", "regression", "ols"]
license = "MIT"

[dependencies]
nalgebra = { version = "0.33.0", default-features = false, features = ["std"] }

[dev-dependencies]
tiny-bench = "0.3.0"

[[bench]]
name = "benchmarks"
harness = false
